--- a/header.html
+++ b/header.html
@@ -1,1 +1,33 @@
 <meta name="robots" content="noindex">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
+<style>
+.tag {
+    display: inline-block;
+    padding: 0.2em 0.4em;
+    margin-right: 0.5em;
+    font-size: 0.85em;
+    color: white;
+    border-radius: 0.25em;
+}
+
+.tag-case-study {
+    background-color: green;
+}
+
+.tag-frequency {
+    background-color: orange;
+}
+
+.tag-fundamentals {
+    background-color: blue;
+}
+
+.tag-exercises {
+    background-color: grey;
+}
+
+
+
+</style>
